added comments model
